force-app/main/default/objects/Sales_Record__c/Sales_Record__c.object-meta.xml
<CustomObject>
    <label>Sales Record</label>
    <pluralLabel>Sales Records</pluralLabel>
    <nameField>
        <label>Sales Record Number</label>
        <type>AutoNumber</type>
        <displayFormat>SR-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>