force-app/main/default/objects/Sales_Record__c/fields/Exclusion_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Reason__c</fullName>
    <label>Exclusion Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>