force-app/main/default/objects/Sales_Record__c/validationRules/Return_Date_Required_When_Return.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Date_Required_When_Return</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    Is_Return__c = true,
    ISBLANK(Return_Date__c)
)</errorConditionFormula>
    <errorMessage>Return Date is required when Is Return is checked.</errorMessage>
    <errorDisplayField>Return_Date__c</errorDisplayField>
</ValidationRule>