force-app/main/default/objects/Sales_Record__c/validationRules/Sale_Amount_Must_Be_Greater_Than_Zero.validationRule-meta.xml
<ValidationRule>
    <fullName>Sale_Amount_Must_Be_Greater_Than_Zero</fullName>
    <active>true</active>
    <errorConditionFormula>Sale_Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Sale Amount must be greater than 0.</errorMessage>
    <errorDisplayField>Sale_Amount__c</errorDisplayField>
</ValidationRule>